@@ -2758,7 +2758,9 @@ class Title {
 		$fname = 'MovePageForm::moveToNewTitle';
 		$comment = wfMsgForContent( '1movedto2', $this->getPrefixedText(), $nt->getPrefixedText() );
 		if ( $reason ) {
-			$comment .= ": $reason";
+			$comment .= wfMsgExt( 'colon-separator',
+				array( 'escapenoentities', 'content' ) );
+			$comment .= $reason;
 		}
 
 		$newid = $nt->getArticleID();
